# 021kp-geo-pipeline

./: .env.example  .gitignore  021kp-geo-pipeline-macos-arm64.spec  CHANGELOG.md  Dockerfile  README.md  RUNBOOK.md  build.bat  build.sh  build_cross_platform.py  docker-compose.yml  geo-pipeline-linux.spec  geo-pipeline-windows.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
config/: ban_words.txt  crontab.example  platform_mapping.json  settings.local.yaml  settings.local.yaml.template  settings.yaml
data/: sample_jobs.csv
scripts/: ai_preview.py  init_db.sql  scheduler.py  test_monitoring_loop.py  validate_pipeline.py
src/: auth_signaler.py  compliance_gate.py  config_manager.py  config_schema.py  config_schema_crlf.bak  config_store.py  content_factory.py  database_backend.py  database_connector.py  dist_monitor.py  exceptions.py  intent_router.py  main.py  web_ui.py
src/data/: geo_pipeline.db
static/: app.css  app.js  index.html
tests/: test_auth_signaler_full.py  test_compliance_gate_full.py  test_config_manager_full.py  test_config_schema_full.py  test_config_store.py  test_content_factory_full.py  test_database_backend.py  test_database_backend_full.py  test_database_connector_full.py  test_dist_monitor_full.py  test_exceptions.py  test_exceptions_full.py  test_geo_pipeline.py  test_intent_router.py  test_intent_router_full.py  test_main_full.py  test_web_api.py  test_web_ui_full.py
workflows/: github_actions.yml
