[project]
name = "021kp-geo-pipeline"
version = "2.0.0"
description = "松江快聘网 GEO 自动化运营系统 - Schema.org JobPosting 结构化数据生成与多平台分发"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "GEO-Engine Team", email = "dev@021kp.com"}
]
keywords = ["geo", "seo", "schema.org", "job-posting", "automation", "songjiang"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    # 核心框架
    "pydantic>=2.6,<3.0",
    "loguru>=0.7,<1.0",
    "jinja2>=3.1,<4.0",
    "requests>=2.31,<3.0",
    # 数据处理
    "lxml>=5.1,<6.0",
    # 配置与调度
    "pyyaml>=6.0,<7.0",
    "python-dateutil>=2.9,<3.0",
    "schedule>=1.2,<2.0",
    # 可选数据库依赖(按需安装)
    # "mysql-connector-python>=8.3,<9.0",
]

[project.optional-dependencies]
# 生产环境完整依赖
production = [
    # SQLite-only, no external DB dependencies needed
]
# 开发测试依赖
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "responses>=0.25,<1.0",
    "black>=24.0,<25.0",
    "isort>=5.13,<6.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
geo-pipeline = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
